# mip-jupyter

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile.jupyter  Dockerfile.jupyterhub  README.md  expected_library.md  expected_library_page.ipynb  feres_analysis.ipynb  jupyterhub_shared.py  linear_regression_sklearn_predict.ipynb  logistic_regression_sklearn_predict.ipynb  naive_bayes_sklearn_predict.ipynb  pyproject.toml  run-local-llm-codex.sh  run-normal-codex-gpt55.sh  sample_notebook.ipynb  stroke_pathology_federated_analysis.ipynb
.llm/: README.md  project.md
docs/: architecture.md  jupyter-ai-architecture.md  jupyter-ai-codex.md  llm_agent_wiki.md  mip-client-quickstart.md  operators.md  release-process.md  repository-layout.md  troubleshooting.md
mip_jupyter_dev/: __init__.py  codex_bootstrap.py  cohort_scout_eval.py  jupyter_mcp_cli.py  jupyter_mcp_config.py  jupyter_mcp_tools.py  mip_acp_persona.py  mip_persona_manager.py  notebook.py  shell_guard.py  stroke_federated.py  test_codex_bootstrap.py  test_cohort_scout_eval.py  test_jupyter_mcp_cli.py  test_shell_guard.py  test_stroke_federated.py
python-client/: README.md  conftest.py  pyproject.toml  setup.py  verify_script.py
python-client/mip/: __init__.py  _metadata_tree.py  _requests.py  algorithms.py  analysis.py  catalog.py  catalog_registry.py  client.py  cohorts.py  context.py  data_model.py  datamodel.py  datasets.py  derived.py  describe.py  discovery.py  display.py  errors.py  exceptions.py  experiments.py  filters.py  labels.py  metadata.py  metadata_tree.py  mip_linear_regression.py  mip_logistic_regression.py  models.py  pipeline.py  pipeline_algorithms.py  preprocessing.py  report.py  request_builder.py  results.py  sklearn.py  tests.py  transformations.py  transport.py  variables.py
python-client/platform_backend_client/: __init__.py  client.py  data_model.py  discovery.py  experiment.py  mip_logistic_regression.py  mip_naive_bayes.py
python-client/portal_backend_client/: __init__.py  algorithm.py  client.py  discovery.py  experiment.py
python-client/tests/: test_algorithms.py  test_analysis_set.py  test_catalog.py  test_catalog_registry.py  test_categorical_column_creator.py  test_client.py  test_cohorts.py  test_context.py  test_describe.py  test_discoverability.py  test_filters.py  test_jupyter_mcp_tools.py  test_labels_only.py  test_mip_facade.py  test_mip_linear_regression.py  test_mip_logistic_regression.py  test_mip_naive_bayes.py  test_models.py  test_no_table.py  test_onboarding_smoke.py  test_pipeline.py  test_preprocessing.py  test_report.py  test_requests.py  test_results.py  test_sklearn_export.py  test_tests.py  test_transformations.py
scripts/: accept-cohort-scout-vllm.sh  (+2 more)
(+44 files in other folders)
