[project]
name = "mip-jupyter-dev"
version = "0.1.0"
description = "Local development runner for mip-jupyter notebooks"
requires-python = ">=3.10,<3.13"
dependencies = [
    "mip[notebook]",
    "notebook>=7.0.0,<8.0.0",
    "ipykernel>=6.0.0,<8.0.0",
    "nbconvert>=7.0.0,<8.0.0",
]

[project.scripts]
mip-notebook = "mip_jupyter_dev.notebook:main"

[tool.uv.sources]
mip = { path = "python-client", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mip_jupyter_dev"]
